force-app/main/default/objects/loan__Loan_Collateral__c/fields/Created_after_conversion__c.field-meta.xml
<CustomField>
    <fullName>Created_after_conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created after conversion</label>
    <type>Checkbox</type>
</CustomField>