force-app/main/default/objects/loan__Loan_Collateral__c/fields/Discharged_Date__c.field-meta.xml
<CustomField>
    <fullName>Discharged_Date__c</fullName>
    <label>Discharged Date</label>
    <type>Date</type>
</CustomField>