force-app/main/default/objects/loan__Loan_Collateral__c/fields/Energy_Rating__c.field-meta.xml
<CustomField>
    <fullName>Energy_Rating__c</fullName>
    <label>Energy Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>