force-app/main/default/objects/loan__Loan_Collateral__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>IF(NOT(ISNULL( Unit_No__c )) &amp;&amp; NOT(ISBLANK( Unit_No__c )),  Unit_No__c +&apos; &apos; , &apos;&apos;)+IF(NOT(ISNULL( Street_No__c )) &amp;&amp; NOT(ISBLANK(Street_No__c )), Street_No__c +&apos; &apos; , &apos;&apos;)+IF(NOT(ISNULL( Street_Name__c )) &amp;&amp; NOT(ISBLANK(Street_Name__c )), Street_Name__c +&apos; &apos; , &apos;&apos;)+IF(NOT(ISNULL( Street_Type__c )) &amp;&amp; NOT(ISBLANK(Street_Type__c )), Street_Type__c , &apos;&apos;)+&apos;, &apos;+IF(NOT(ISNULL( Suburb__c )) &amp;&amp; NOT(ISBLANK(Suburb__c )), Suburb__c +&apos; &apos; , &apos;&apos;)+IF( NOT(ISNULL( TEXT(State__c))) &amp;&amp; NOT(ISBLANK(TEXT(State__c))),  TEXT(State__c)+&apos; &apos; , &apos;&apos;)+IF(NOT(ISNULL( Postal_Code__c )) &amp;&amp; NOT(ISBLANK(Postal_Code__c )), Postal_Code__c , &apos;&apos;)+&apos;, &apos;+IF(NOT(ISNULL( Country__c )) &amp;&amp; NOT(ISBLANK(Country__c )), Country__c +&apos; &apos; , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Address</label>
    <type>Text</type>
</CustomField>