force-app/main/default/objects/loan__Loan_Collateral__c/fields/Land_Area_Units__c.field-meta.xml
<CustomField>
    <fullName>Land_Area_Units__c</fullName>
    <label>Land Area Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acres</fullName>
            </value>
            <value>
                <fullName>Square Metres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>