force-app/main/default/objects/loan__Loan_Collateral__c/fields/MIP_Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>MIP_Valuation_Date__c</fullName>
    <label>MIP Valuation Date</label>
    <type>Date</type>
</CustomField>