force-app/main/default/objects/loan__Loan_Collateral__c/fields/MIP_Value__c.field-meta.xml
<CustomField>
    <fullName>MIP_Value__c</fullName>
    <label>MIP Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>