force-app/main/default/objects/loan__Loan_Collateral__c/fields/MIP_Valuer__c.field-meta.xml
<CustomField>
    <fullName>MIP_Valuer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIP Valuer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Valuer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loan Collateral (MIP Valuer)</relationshipLabel>
    <relationshipName>Loan_Collateral1</relationshipName>
    <type>Lookup</type>
</CustomField>