force-app/main/default/objects/loan__Loan_Collateral__c/fields/Original_Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Valuation_Date__c</fullName>
    <label>Original Valuation Date</label>
    <type>Date</type>
</CustomField>