force-app/main/default/objects/loan__Loan_Collateral__c/fields/Primary_Security__c.field-meta.xml
<CustomField>
    <fullName>Primary_Security__c</fullName>
    <label>Primary Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>