force-app/main/default/objects/loan__Loan_Collateral__c/fields/Primary_Usage__c.field-meta.xml
<CustomField>
    <fullName>Primary_Usage__c</fullName>
    <label>Primary Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>