force-app/main/default/objects/loan__Loan_Collateral__c/fields/Property_Insurance_Cover_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Insurance_Cover_Type__c</fullName>
    <label>Property Insurance Cover Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Body Corporate</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>