force-app/main/default/objects/loan__Loan_Collateral__c/fields/Property_Insurance_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Property_Insurance_Expiry_Date__c</fullName>
    <label>Property Insurance Expiry Date</label>
    <type>Date</type>
</CustomField>