force-app/main/default/objects/loan__Loan_Collateral__c/fields/Property_Insurance_Interested_Party__c.field-meta.xml
<CustomField>
    <fullName>Property_Insurance_Interested_Party__c</fullName>
    <label>Property Insurance Interested Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>