force-app/main/default/objects/loan__Loan_Collateral__c/fields/Property_Insurance_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Property_Insurance_Policy_Number__c</fullName>
    <label>Property Insurance Policy Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>