force-app/main/default/objects/loan__Loan_Collateral__c/fields/Property_Insurer_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Insurer_Name__c</fullName>
    <label>Property Insurer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>