force-app/main/default/objects/loan__Loan_Collateral__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25 Acres or Less</fullName>
            </value>
            <value>
                <fullName>Aged Care Unit</fullName>
            </value>
            <value>
                <fullName>Apartment Unit Flat</fullName>
            </value>
            <value>
                <fullName>Bedsitter Bachelor</fullName>
            </value>
            <value>
                <fullName>Block of Units or Flats</fullName>
            </value>
            <value>
                <fullName>Company Title Unit</fullName>
            </value>
            <value>
                <fullName>Converted Commercial Property</fullName>
            </value>
            <value>
                <fullName>Converted Industrial Property</fullName>
            </value>
            <value>
                <fullName>Converted Motel Units</fullName>
            </value>
            <value>
                <fullName>Display House</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Fully Detached House</fullName>
            </value>
            <value>
                <fullName>High Density Apartment</fullName>
            </value>
            <value>
                <fullName>Holiday Home</fullName>
            </value>
            <value>
                <fullName>Holiday Rental</fullName>
            </value>
            <value>
                <fullName>Improved Land</fullName>
            </value>
            <value>
                <fullName>Kit Home</fullName>
            </value>
            <value>
                <fullName>Light Industrial</fullName>
            </value>
            <value>
                <fullName>Low Density Apartment</fullName>
            </value>
            <value>
                <fullName>Luxury House</fullName>
            </value>
            <value>
                <fullName>Luxury Other</fullName>
            </value>
            <value>
                <fullName>Medium Density Apartment</fullName>
            </value>
            <value>
                <fullName>Multiple Dwelling Development</fullName>
            </value>
            <value>
                <fullName>Non Specialised Commercial</fullName>
            </value>
            <value>
                <fullName>Non Specialised Industrial</fullName>
            </value>
            <value>
                <fullName>Offices</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Over 100 Acres</fullName>
            </value>
            <value>
                <fullName>Professional Chambers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>