force-app/main/default/objects/loan__Loan_Collateral__c/fields/QBE_Location__c.field-meta.xml
<CustomField>
    <fullName>QBE_Location__c</fullName>
    <label>QBE Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>