force-app/main/default/objects/loan__Loan_Collateral__c/fields/Risk_Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Valuation_Date__c</fullName>
    <label>Risk Valuation Date</label>
    <type>Date</type>
</CustomField>