force-app/main/default/objects/loan__Loan_Collateral__c/fields/Rural_Usage_List__c.field-meta.xml
<CustomField>
    <fullName>Rural_Usage_List__c</fullName>
    <label>Rural Usage List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income Producing</fullName>
            </value>
            <value>
                <fullName>Rural Life</fullName>
            </value>
            <value>
                <fullName>Rural Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>