force-app/main/default/objects/loan__Loan_Collateral__c/fields/S_P_Location__c.field-meta.xml
<CustomField>
    <fullName>S_P_Location__c</fullName>
    <label>S&amp;P Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>