force-app/main/default/objects/loan__Loan_Collateral__c/fields/Security_Status__c.field-meta.xml
<CustomField>
    <fullName>Security_Status__c</fullName>
    <label>Security Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
            <value>
                <fullName>Mortgagee in Possession</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>