force-app/main/default/objects/loan__Loan_Collateral__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Established</fullName>
            </value>
            <value>
                <fullName>New Building</fullName>
            </value>
            <value>
                <fullName>Off the Plan</fullName>
            </value>
            <value>
                <fullName>Vacant Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>