force-app/main/default/objects/loan__Loan_Collateral__c/fields/Title_Insurance_Policy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Title_Insurance_Policy_Amount__c</fullName>
    <label>Title Insurance Policy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>