force-app/main/default/objects/loan__Loan_Collateral__c/fields/Title_Insurance_Policy_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Insurance_Policy_Date__c</fullName>
    <label>Title Insurance Policy Date</label>
    <type>Date</type>
</CustomField>