force-app/main/default/objects/loan__Loan_Collateral__c/fields/Title_Insurance_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Title_Insurance_Policy_Number__c</fullName>
    <label>Title Insurance Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>