force-app/main/default/objects/loan__Loan_Collateral__c/fields/Title_Insurance_Premium__c.field-meta.xml
<CustomField>
    <fullName>Title_Insurance_Premium__c</fullName>
    <label>Title Insurance Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>