force-app/main/default/objects/loan__Loan_Collateral__c/fields/Title_Reference__c.field-meta.xml
<CustomField>
    <fullName>Title_Reference__c</fullName>
    <label>Title Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>