force-app/main/default/objects/loan__Loan_Collateral__c/fields/Title_System__c.field-meta.xml
<CustomField>
    <fullName>Title_System__c</fullName>
    <label>Title System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Old Law</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Torrens</fullName>
            </value>
            <value>
                <fullName>Unregistered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>