force-app/main/default/objects/loan__Loan_Collateral__c/recordTypes/Loan_Collateral_Record.recordType-meta.xml
<RecordType>
    <fullName>Loan_Collateral_Record</fullName>
    <active>true</active>
    <label>Loan Collateral Record</label>
</RecordType>