force-app/main/default/objects/loan__Loan_Collateral__c/recordTypes/New_Loan_Collateral_Record.recordType-meta.xml
<RecordType>
    <fullName>New_Loan_Collateral_Record</fullName>
    <active>true</active>
    <label>New Loan Collateral Record</label>
</RecordType>