force-app/main/default/objects/loan__Loan_Collateral__c/validationRules/Rural_Usage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Rural_Usage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()  &amp;&amp;  ISPICKVAL( Primary_Usage__c , &apos;Rural&apos;)  &amp;&amp;   ISBLANK( TEXT( Rural_Usage_List__c ))  &amp;&amp;  Created_after_conversion__c = false</errorConditionFormula>
    <errorDisplayField>Rural_Usage_List__c</errorDisplayField>
    <errorMessage>Rural Usage List can&apos;t be blank</errorMessage>
</ValidationRule>